# lcp

./: .gitignore  .python-version  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.claude-plugin/: marketplace.json
.claude/skills/lcp-writing-documentation/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  labels.yml  pages.yml  pr-title.yml  publish.yml  release-drafter.yml  stale.yml  tests.yml
_site_old/: README.md  docs.html  examples.html  getting-started.html  index.html
api/: index.html
api/ai/: index.html
api/coverage/: index.html
api/diff/: index.html
api/generator/: index.html
api/mcp-server/: index.html
api/models/: index.html
api/publish/: index.html
api/scanner/: index.html
api/validator/: index.html
architecture/: index.html
architecture/ai_docgen/: index.html
architecture/ai_docgen/architecture/: index.html
architecture/coverage/: index.html
architecture/diff/: index.html
architecture/diff/architecture/: index.html
architecture/manifest/: index.html
architecture/manifest/architecture/: index.html
architecture/mcp_server/: index.html
architecture/mcp_server/architecture/: index.html
architecture/plugin/: index.html
architecture/plugin/architecture/: index.html
architecture/publish/: index.html
architecture/publish/architecture/: index.html
assets/: schema.json
cli/: index.html
docs/: cli.md  index.md  introduction.md  quickstart.md
docs/ai_docgen/: architecture.md  index.md
docs/api/: ai.md  coverage.md  diff.md  generator.md  index.md  mcp-server.md  models.md  publish.md  scanner.md  validator.md
docs/architecture/ai_docgen/: architecture.md  index.md
docs/coverage/: index.md
docs/diff/: architecture.md  index.md
docs/guides/: ai-docgen.md  claude-code-plugin.md  mcp-server.md  publishing.md
docs/manifest/: architecture.md  index.md
docs/mcp_server/: architecture.md  index.md
docs/plugin/: architecture.md  index.md
docs/publish/: architecture.md  index.md  migration.md
docs/spec/: examples.md  index.md  schema.md
docs/stylesheets/: extra.css
guides/ai-docgen/: index.html
guides/claude-code-plugin/: index.html
guides/mcp-server/: index.html
guides/publishing/: index.html
introduction/: index.html
overrides/: main.html
overrides/partials/: header.html
plugin/lcp/: .mcp.json  README.md
quickstart/: index.html
registry/: README.md
search/: search_index.json
site/: README.md  ai-docgen.html  docs.html  examples.html  getting-started.html  index.html  index.md  mcp.html  plugin.html  publish.html  why-lcp.html
site/asset/: schema.json
site/assets/: schema.json
site/components/: footer.html  header.html
site/css/: styles.css
site/docs/: cli.md  introduction.md  quickstart.md
site/js/: main.js
site/stylesheets/: extra.css
skill/: lcp-serve-all.skill  lcp-usage.skill
skill/lcp-serve-all/: SKILL.md
skill/lcp-usage/: SKILL.md
spec/: index.html
spec/examples/: index.html
spec/schema/: index.html
src/lcp/: __init__.py  __main__.py  cli.py  coverage.py  diff.py  generator.py  mcp_server.py  naming.py  publish.py  scanner.py  schema.json  validator.py
src/lcp/ai/: agent.py  (+6 more)
src/lcp_python_sdk/: __init__.py  cli.py  generator.py  models.py  scanner.py  schema.json  validator.py
stylesheets/: extra.css
tests/: conftest.py  sample_module.py  test_ai_agent.py  test_ai_connectors.py  test_ai_hierarchy.py  test_ai_models.py  test_ai_writer.py  test_cli.py  test_cli_docgen.py  test_cli_version.py  test_coverage.py  test_diff.py  test_generator.py  test_integration.py  test_mcp_server.py  test_models.py  test_module_entrypoint.py  test_naming.py  test_publish.py  test_resolve_error_message.py  test_scanner.py  test_scanner_resilient.py  test_serve_all_expose.py  test_validator.py
tests/plugin/: run_all.sh  test_config_reader.sh  test_generate_config.sh  test_manifest.sh  test_resolution.sh
(+23 files in other folders)
