[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcp"
version = "0.1.0"
description = "Python SDK for generating Library Context Protocol (LCP) files from Python packages"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Andrea Zanini" }
]
keywords = ["lcp", "library-context-protocol", "api-documentation", "introspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jsonschema>=4.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
lcp = "lcp.cli:main"

[project.urls]
Homepage = "https://github.com/andreazanini/lcp"
Repository = "https://github.com/andreazanini/lcp"

[tool.hatch.build.targets.wheel]
packages = ["src/lcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
