[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcp"
version = "1.0.0"
description = "Python SDK for generating Library Context Protocol (LCP) files from Python packages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Andrea Zanini" }
]
keywords = ["lcp", "library-context-protocol", "api-documentation", "introspection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "jsonschema>=4.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
    "anthropic>=0.20",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.15.2"
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "mkdocstrings[python]>=0.25",
]

[project.scripts]
lcp = "lcp.cli:main"

[project.urls]
Homepage = "https://github.com/zazza123/lcp"
Repository = "https://github.com/zazza123/lcp"

[tool.hatch.build.targets.wheel]
packages = ["src/lcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
